add Albanian translation

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -142,6 +142,12 @@ order = order-last
 url = /ru/
 language = Русский (ru)
 
+[sq]
+direction = text-left
+order = order-last
+url = /sq/
+language = Shqip (sq)
+
 [th]
 direction = text-left
 order = order-last
